--- a/spring5webapp/pom.xml
+++ b/spring5webapp/pom.xml
@@ -3,21 +3,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.bcaliskan</groupId>
-    <artifactId>spring-beginner-to-guru</artifactId>
+    <artifactId>spring5webapp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-beginner-to-guru</name>
-    <description>Demo project for Spring Boot</description>
-
-    <properties>
-        <java.version>11</java.version>
-    </properties>
+    <name>spring5webapp</name>
+    <description>Demo project for Spring Boot, chapter 2</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.8.RELEASE</version>
+        <version>2.3.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <properties>
+        <java.version>11</java.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -54,4 +54,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
